# gtk-vdeck

./: BUGS  CMakeLists.txt  Doxyfile  NEWS  README  config.h.cmake  config.vala.cmake
editor/: CMakeLists.txt  EditWindow.cpp  EditWindow.hpp  EditWindow.vala  editor.xml  vcard_edit.vala  vcard_gtk.cpp  vcard_gtk.vala
parser/: CMakeLists.txt  StructuredText.cpp  StructuredText.hpp  VCard.cpp  VCard.hpp  VCard.vala  VDeck.cpp  VDeck.hpp  Vcard.vala  VcardTypes.vala  Vdeck.vala  mutt-query.cc  mutt-query.vala
share/: CMakeLists.txt  editor.xml  vdeck.xml
src/: CMakeLists.txt  DeckView.vala  ListView.cpp  ListView.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.vala  main.cpp  vdeck.vala  vdeck.xml
tests/: CMakeLists.txt  test.cc  test_split.cc  tests.vala
